--- a/mysite/mysite/templates/mysite/home.html
+++ b/mysite/mysite/templates/mysite/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eleena</title>
     <p>{{ msg }}</p>
+    <p>{{ test }}</p>
 </head>
 <body>
     
