--- a/mysite/shapes/templates/shapes/main.html
+++ b/mysite/shapes/templates/shapes/main.html
@@ -13,4 +13,5 @@
 {% block content %}
 
     <div id="scene-box"></div>
+    <div class="loading" id="js-loader"><div class="loader"></div></div>
 {% endblock %}
